--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
                         }
                     };
                     
-                    const apiKey = "";
+                    const apiKey = "AIzaSyB_lww3ajaVceKaEX2X3bF7lB_bDpWeCoM";
                     const apiUrl = `https://generativelanguage.googleapis.com/v1beta/models/gemini-2.5-flash-preview-05-20:generateContent?key=${apiKey}`;
 
                     const response = await withExponentialBackoff(() => fetch(apiUrl, {
