--- a/index.html
+++ b/index.html
@@ -49,6 +49,15 @@
             box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
         }
     </style>
+
+    <!-- Open Graph Meta Tags for Link Previews -->
+    <meta property="og:title" content="Snowdon: A Living Planet Expedition">
+    <meta property="og:description" content="Join us for a daring one-day hiking expedition up Snowdon in Wales on August 24th, 2025!">
+    <meta property="og:image" content="https://yourdomain.com/path/to/your/snowdon-image.jpg">
+    <meta property="og:url" content="https://www.yourdomain.com/index.html">
+    <meta property="og:type" content="website">
+    <meta property="og:site_name" content="Living Planet Expeditions">
+    <!-- End Open Graph Meta Tags -->
 </head>
 <body class="text-gray-800">
 
