--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <!-- Open Graph Meta Tags for Link Previews -->
     <meta property="og:title" content="Snowdon: A Living Planet Expedition">
     <meta property="og:description" content="Join us for a daring one-day hiking expedition up Snowdon in Wales on August 24th, 2025!">
-    <meta property="og:image" content="https://yourdomain.com/path/to/your/snowdon-image.jpg">
+    <meta property="og:image" content="https://images.unsplash.com/photo-1608054426970-c6ff5a4399c2?q=80&w=2832&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D">
     <meta property="og:url" content="https://www.yourdomain.com/index.html">
     <meta property="og:type" content="website">
     <meta property="og:site_name" content="Living Planet Expeditions">
